test/positive/feature_byte.java

public class feature_byte {
  public feature_byte() {}
  protected byte x;
}

