test/negative/FinalField.java
public class FinalField {
    final int x;
}
